Exercise2/initial/src/main/bkool/parser/.antlr/BKOOLParser.py
# Generated from c:/Users/nvhuy/Documents/GitHub/PPl-HK232/Exercise2/initial/src/main/bkool/parser/BKOOL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'return'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'", "','", "'('", "')'", 
                     "'{'", "'}'", "'='", "'+'", "'-'", "'*'", "'/'", "'.'" ]

    symbolicNames = [ "<INVALID>", "KW_INT", "KW_FLOAT", "KW_RETURN", "ID", 
                      "INT_LIT", "FLOAT_LIT", "SEMICOLON", "COMMA", "L_BRACK", 
                      "R_BRACK", "L_PAREN", "R_PAREN", "ASSIGN", "ADD", 
                      "SUBTRACT", "MULTI", "DIV", "DOT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_line_var_decl = 2
    RULE_type_def = 3
    RULE_vardecl = 4
    RULE_id_list = 5
    RULE_id_list_tail = 6
    RULE_funcdecl = 7
    RULE_param = 8
    RULE_param_list = 9
    RULE_param_list_tail = 10
    RULE_body = 11
    RULE_inner_scope = 12
    RULE_line = 13
    RULE_statement = 14
    RULE_assignment_stmt = 15
    RULE_call_stmt = 16
    RULE_passing = 17
    RULE_passing_list = 18
    RULE_passing_list_tail = 19
    RULE_return_stmt = 20
    RULE_expr = 21
    RULE_add_expr = 22
    RULE_sub_expr = 23
    RULE_mult_expr = 24
    RULE_mult_op = 25
    RULE_primary_expr = 26

    ruleNames =  [ "program", "decl", "line_var_decl", "type_def", "vardecl", 
                   "id_list", "id_list_tail", "funcdecl", "param", "param_list", 
                   "param_list_tail", "body", "inner_scope", "line", "statement", 
                   "assignment_stmt", "call_stmt", "passing", "passing_list", 
                   "passing_list_tail", "return_stmt", "expr", "add_expr", 
                   "sub_expr", "mult_expr", "mult_op", "primary_expr" ]

    EOF = Token.EOF
    KW_INT=1
    KW_FLOAT=2
    KW_RETURN=3
    ID=4
    INT_LIT=5
    FLOAT_LIT=6
    SEMICOLON=7
    COMMA=8
    L_BRACK=9
    R_BRACK=10
    L_PAREN=11
    R_PAREN=12
    ASSIGN=13
    ADD=14
    SUBTRACT=15
    MULTI=16
    DIV=17
    DOT=18
    WS=19
    ERROR_CHAR=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.DeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.DeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.decl()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1 or _la==2):
                    break

            self.state = 59
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line_var_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Line_var_declContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(BKOOLParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decl




    def decl(self):

        localctx = BKOOLParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.line_var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Line_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKOOLParser.VardeclContext,0)


        def SEMICOLON(self):
            return self.getToken(BKOOLParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_line_var_decl




    def line_var_decl(self):

        localctx = BKOOLParser.Line_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_line_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.vardecl()
            self.state = 66
            self.match(BKOOLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_INT(self):
            return self.getToken(BKOOLParser.KW_INT, 0)

        def KW_FLOAT(self):
            return self.getToken(BKOOLParser.KW_FLOAT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_type_def




    def type_def(self):

        localctx = BKOOLParser.Type_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_def(self):
            return self.getTypedRuleContext(BKOOLParser.Type_defContext,0)


        def id_list(self):
            return self.getTypedRuleContext(BKOOLParser.Id_listContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_vardecl




    def vardecl(self):

        localctx = BKOOLParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.type_def()
            self.state = 71
            self.id_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def id_list_tail(self):
            return self.getTypedRuleContext(BKOOLParser.Id_list_tailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_id_list




    def id_list(self):

        localctx = BKOOLParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(BKOOLParser.ID)
            self.state = 74
            self.id_list_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def id_list_tail(self):
            return self.getTypedRuleContext(BKOOLParser.Id_list_tailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_id_list_tail




    def id_list_tail(self):

        localctx = BKOOLParser.Id_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_list_tail)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(BKOOLParser.COMMA)
                self.state = 77
                self.match(BKOOLParser.ID)
                self.state = 78
                self.id_list_tail()
                pass
            elif token in [7, 10]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_def(self):
            return self.getTypedRuleContext(BKOOLParser.Type_defContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def body(self):
            return self.getTypedRuleContext(BKOOLParser.BodyContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_funcdecl




    def funcdecl(self):

        localctx = BKOOLParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.type_def()
            self.state = 83
            self.match(BKOOLParser.ID)
            self.state = 84
            self.param()
            self.state = 85
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_BRACK(self):
            return self.getToken(BKOOLParser.L_BRACK, 0)

        def param_list(self):
            return self.getTypedRuleContext(BKOOLParser.Param_listContext,0)


        def R_BRACK(self):
            return self.getToken(BKOOLParser.R_BRACK, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_param




    def param(self):

        localctx = BKOOLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(BKOOLParser.L_BRACK)
            self.state = 88
            self.param_list()
            self.state = 89
            self.match(BKOOLParser.R_BRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKOOLParser.VardeclContext,0)


        def param_list_tail(self):
            return self.getTypedRuleContext(BKOOLParser.Param_list_tailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_param_list




    def param_list(self):

        localctx = BKOOLParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_list)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.vardecl()
                self.state = 92
                self.param_list_tail()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(BKOOLParser.SEMICOLON, 0)

        def vardecl(self):
            return self.getTypedRuleContext(BKOOLParser.VardeclContext,0)


        def param_list_tail(self):
            return self.getTypedRuleContext(BKOOLParser.Param_list_tailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_param_list_tail




    def param_list_tail(self):

        localctx = BKOOLParser.Param_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param_list_tail)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(BKOOLParser.SEMICOLON)
                self.state = 98
                self.vardecl()
                self.state = 99
                self.param_list_tail()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_PAREN(self):
            return self.getToken(BKOOLParser.L_PAREN, 0)

        def inner_scope(self):
            return self.getTypedRuleContext(BKOOLParser.Inner_scopeContext,0)


        def R_PAREN(self):
            return self.getToken(BKOOLParser.R_PAREN, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_body




    def body(self):

        localctx = BKOOLParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(BKOOLParser.L_PAREN)
            self.state = 105
            self.inner_scope()
            self.state = 106
            self.match(BKOOLParser.R_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inner_scopeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.LineContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.LineContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_inner_scope




    def inner_scope(self):

        localctx = BKOOLParser.Inner_scopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_inner_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 108
                self.line()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line_var_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Line_var_declContext,0)


        def statement(self):
            return self.getTypedRuleContext(BKOOLParser.StatementContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_line




    def line(self):

        localctx = BKOOLParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_line)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.line_var_decl()
                pass
            elif token in [3, 4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(BKOOLParser.SEMICOLON, 0)

        def assignment_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Assignment_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_statement




    def statement(self):

        localctx = BKOOLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 118
                self.assignment_stmt()
                pass

            elif la_ == 2:
                self.state = 119
                self.call_stmt()
                pass

            elif la_ == 3:
                self.state = 120
                self.return_stmt()
                pass


            self.state = 123
            self.match(BKOOLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_assignment_stmt




    def assignment_stmt(self):

        localctx = BKOOLParser.Assignment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_assignment_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(BKOOLParser.ID)
            self.state = 126
            self.match(BKOOLParser.ASSIGN)
            self.state = 127
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Call_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def passing(self):
            return self.getTypedRuleContext(BKOOLParser.PassingContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_call_stmt




    def call_stmt(self):

        localctx = BKOOLParser.Call_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_call_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(BKOOLParser.ID)
            self.state = 130
            self.passing()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PassingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_BRACK(self):
            return self.getToken(BKOOLParser.L_BRACK, 0)

        def passing_list(self):
            return self.getTypedRuleContext(BKOOLParser.Passing_listContext,0)


        def R_BRACK(self):
            return self.getToken(BKOOLParser.R_BRACK, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_passing




    def passing(self):

        localctx = BKOOLParser.PassingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_passing)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(BKOOLParser.L_BRACK)
            self.state = 133
            self.passing_list()
            self.state = 134
            self.match(BKOOLParser.R_BRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Passing_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def passing_list_tail(self):
            return self.getTypedRuleContext(BKOOLParser.Passing_list_tailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_passing_list




    def passing_list(self):

        localctx = BKOOLParser.Passing_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_passing_list)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.expr()
                self.state = 137
                self.passing_list_tail()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Passing_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def passing_list_tail(self):
            return self.getTypedRuleContext(BKOOLParser.Passing_list_tailContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_passing_list_tail




    def passing_list_tail(self):

        localctx = BKOOLParser.Passing_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_passing_list_tail)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(BKOOLParser.COMMA)
                self.state = 143
                self.expr()
                self.state = 144
                self.passing_list_tail()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_RETURN(self):
            return self.getToken(BKOOLParser.KW_RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_return_stmt




    def return_stmt(self):

        localctx = BKOOLParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 40, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(BKOOLParser.KW_RETURN)
            self.state = 150
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def add_expr(self):
            return self.getTypedRuleContext(BKOOLParser.Add_exprContext,0)


        def sub_expr(self):
            return self.getTypedRuleContext(BKOOLParser.Sub_exprContext,0)


        def mult_expr(self):
            return self.getTypedRuleContext(BKOOLParser.Mult_exprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_expr




    def expr(self):

        localctx = BKOOLParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 42, self.RULE_expr)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.add_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.sub_expr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self.mult_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Add_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sub_expr(self):
            return self.getTypedRuleContext(BKOOLParser.Sub_exprContext,0)


        def ADD(self):
            return self.getToken(BKOOLParser.ADD, 0)

        def add_expr(self):
            return self.getTypedRuleContext(BKOOLParser.Add_exprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_add_expr




    def add_expr(self):

        localctx = BKOOLParser.Add_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 44, self.RULE_add_expr)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.sub_expr()
                self.state = 158
                self.match(BKOOLParser.ADD)
                self.state = 159
                self.add_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.sub_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mult_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Mult_exprContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Mult_exprContext,i)


        def SUBTRACT(self):
            return self.getToken(BKOOLParser.SUBTRACT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_sub_expr




    def sub_expr(self):

        localctx = BKOOLParser.Sub_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 46, self.RULE_sub_expr)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.mult_expr()
                self.state = 165
                self.match(BKOOLParser.SUBTRACT)
                self.state = 166
                self.mult_expr()
                pass
